--- a/orders/templates/orders/payment.html
+++ b/orders/templates/orders/payment.html
@@ -8,6 +8,7 @@
 
 {% block content_head %}
 <div class="content-head">
+    <div class="left"></div>
     <div class="right modal-container" x-data="{ isOpen: false }">
         <a class="btn btn-link btn-xsmall" data-balloon-pos="down" aria-label="Formas de pago" @click="isOpen = true">
             <i class='bx bx-help-circle bx-sm'></i>
@@ -109,11 +110,15 @@
                     <div class="address-item">
                         <div class="address-delivered">
                             <div class="address-origin">
+                                <div class="text-small flex items-center"><i style="margin-right: 5px;"
+                                        class="bx bx-user bx-xs"></i> {{ detail.address_origin.full_name }}</div>
                                 <h6>{{ detail.address_origin.address }}</h6>
                                 <div class="text-small font-medium">{{ detail.address_origin.address_city }}</div>
                             </div>
                             <img class="order-icon" src="{% static 'icon/order-icon.svg' %}" />
                             <div class="address-destiny">
+                                <div class="text-small flex items-center justity-end"><i style="margin-right: 5px;"
+                                        class="bx bx-user bx-xs"></i> {{ detail.address_destiny.full_name }}</div>
                                 <h6>{{ detail.address_destiny.address }}</h6>
                                 <div class="text-small font-medium">{{ detail.address_destiny.address_city }}</div>
                             </div>
