--- a/details/templates/details/destiny-map.html
+++ b/details/templates/details/destiny-map.html
@@ -39,11 +39,11 @@
                 <p>{{ detail.get_tracking_code_text }}</p>
                 <h6>{{ detail.address_destiny.address_complete }}</h6>
                 <h6 class="mt-2">N° de puerta/Lte/Mz/Dpto/Piso</h6>
-                <div class="subheading">{{ detail.address_destiny.address_detail }}</div>
+                <p>{{ detail.address_destiny.address_detail }}</p>
                 <h6 class="mt-2">Referencia</h6>
                 <p>{{ detail.address_destiny.reference }}</p>
             </div>
-            <div class="mt-6">
+            <div class="mt-4">
                 <h5 class="mb-2 font-bold">¿Quién atenderá al motorizado?</h5>
                 <h6>{{ detail.address_destiny.full_name }}</h6>
                 <p class="flex items-center">
